Fix text not wrapping on tiles in IE.

--- a/src/app/workspace/workspace-apps.less
+++ b/src/app/workspace/workspace-apps.less
@@ -39,6 +39,7 @@
   }
 
   &-name {
+    width: 100%;
     font-weight: 500;
     line-height: 18px;
     font-size: 12px;
@@ -49,6 +50,7 @@
   }
 
   &-description {
+    width: 100%;
     height: 36px;
     line-height: 18px;
     font-size: 12px;
